# Projet-Desktop-agenda

./: .gitignore  Agenda.pro  CMakeLists.txt  README.md  add_event_dialog.cpp  add_event_dialog.h  agenda_window.cpp  agenda_window.h  login_dialog.cpp  login_dialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
